--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
 		"test:all": "dojo build --mode unit && dojo build --mode functional && dojo test --all --config local"
 	},
 	"dependencies": {
-		"@dojo/framework": "next",
-		"node-fetch": "2.6.0",
+		"@dojo/framework": "~7.0.0",
+		"@types/parse-link-header": "^1.0.0",
+		"parse-link-header": "^1.0.1",
 		"tslib": "~1.9.1"
 	},
 	"devDependencies": {
-		"@dojo/cli": "next",
-		"@dojo/cli-build-app": "next",
-		"@dojo/cli-test-intern": "next",
-		"@types/node-fetch": "2.5.7",
+		"@dojo/cli": "~7.0.0",
+		"@dojo/cli-build-app": "~7.0.0",
+		"@dojo/cli-test-intern": "~7.0.0",
 		"@types/node": "~9.6.5",
+		"file-system-cache": "^1.0.5",
 		"prettier": "~1.9.0",
-		"typescript": "~3.4.5"
+		"typescript": "~3.9.0"
 	},
 	"prettier": {
 		"singleQuote": true,
